--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "browserify": "^16.1.0",
     "d3": "^4.13.0",
     "d3-axis": "^1.0.8",
+    "npm": "^5.8.0",
     "pixi-viewport": "^1.3.0",
     "pixi.js": "^4.7.0",
     "tsify": "^3.0.4",
