--- a/glviewer/Cargo.toml
+++ b/glviewer/Cargo.toml
@@ -12,3 +12,7 @@ image = "0.23.2"
 serde_json = "1.0.50"
 bit-set = "0.5.1"
 rand = "0.7.3"
+
+[dependencies.rusttype]
+version = "0.9.1"
+features = ["gpu_cache"]
