--- a/glviewer/Cargo.toml
+++ b/glviewer/Cargo.toml
@@ -15,6 +15,7 @@ image = "0.23.2"
 serde_json = "1.0.50"
 bit-set = "0.5.1"
 rand = "0.7.3"
+regex = "1.3.7"
 
 [dependencies.rusttype]
 version = "0.9.1"
