--- a/glviewer/Cargo.toml
+++ b/glviewer/Cargo.toml
@@ -16,6 +16,7 @@ serde_json = "1.0.50"
 bit-set = "0.5.1"
 rand = "0.7.3"
 regex = "1.3.7"
+flate2 = "1.0.14"
 
 [dependencies.rusttype]
 version = "0.9.1"
